[gd_scene load_steps=7 format=3 uid="uid://cdyybwnor7o2u"]

[ext_resource type="Script" path="res://addons/cognite/editor/cognite_editor.gd" id="1_8i7su"]
[ext_resource type="Texture2D" uid="uid://dgsq8vhvavv6k" path="res://addons/cognite/assets/artwork_godot.jpg" id="2_3d5g2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n24ot"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(0.188235, 0.298039, 0.34902, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="Theme" id="Theme_rd5gr"]
GraphNode/styles/titlebar = SubResource("StyleBoxFlat_n24ot")
GraphNode/styles/titlebar_selected = SubResource("StyleBoxFlat_n24ot")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3nrat"]
bg_color = Color(0, 0.0196078, 0.0588235, 0.627451)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4bqwb"]
bg_color = Color(0, 0, 0.109804, 0.427451)

[node name="editor" type="Control"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8i7su")
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.180392)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3d5g2")
expand_mode = 1
stretch_mode = 6

[node name="GraphEdit" type="GraphEdit" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_rd5gr")
theme_override_styles/panel = SubResource("StyleBoxFlat_3nrat")
scroll_offset = Vector2(-1000, -500)
right_disconnects = true
minimap_enabled = false
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="GraphEdit"]
clip_contents = true
layout_mode = 0
offset_left = 304.0
offset_top = 10.0
offset_right = 498.0
offset_bottom = 41.0

[node name="create_nodegraph" type="OptionButton" parent="GraphEdit/HBoxContainer"]
layout_mode = 2
item_count = 5
selected = 0
popup/item_0/text = "Create NodeGraph "
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_0/separator = true
popup/item_1/text = "States"
popup/item_1/id = 1
popup/item_2/text = "Events"
popup/item_2/id = 2
popup/item_3/text = "Change State"
popup/item_3/id = 3
popup/item_4/text = "Condition"
popup/item_4/id = 4

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_4bqwb")
text = "Select or create a CogniteAssemble to start editing"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[connection signal="connection_request" from="GraphEdit" to="." method="_on_graph_edit_connection_request"]
[connection signal="disconnection_request" from="GraphEdit" to="." method="_on_graph_edit_disconnection_request"]
[connection signal="item_selected" from="GraphEdit/HBoxContainer/create_nodegraph" to="." method="_on_create_nodegraph_item_selected"]
